--- a/shopmart_flutter/pubspec.yaml
+++ b/shopmart_flutter/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   # Scansione barcode con fotocamera
   mobile_scanner: ^5.2.3
 
+  # Camera per OCR
+  camera: ^0.11.0+2
+
+  # OCR per riconoscimento testo (date di scadenza)
+  google_mlkit_text_recognition: ^0.13.1
+
   # HTTP client per chiamate API
   http: ^1.2.2
 
