login/registrazione + OAuth google ok

--- a/shopmart_flutter/pubspec.yaml
+++ b/shopmart_flutter/pubspec.yaml
@@ -64,6 +64,12 @@ dependencies:
   # Sharing files
   share_plus: ^10.1.2
 
+  # Authentication
+  google_sign_in: ^6.2.2
+
+  # Secure storage per token
+  flutter_secure_storage: ^9.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
