--- a/shopmart_flutter/pubspec.yaml
+++ b/shopmart_flutter/pubspec.yaml
@@ -1,52 +1,26 @@
 name: shopmart_flutter
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
   sdk: ^3.5.3
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
-  # Scansione barcode con fotocamera
+  # Scanner e OCR
   mobile_scanner: ^5.2.3
-
-  # Camera per OCR
   camera: ^0.11.0+2
-
-  # OCR per riconoscimento testo (date di scadenza)
   google_mlkit_text_recognition: ^0.13.1
 
-  # HTTP client per chiamate API
+  # Chiamate API
   http: ^1.2.2
 
   # State management
@@ -58,86 +32,41 @@ dependencies:
   # Environment variables
   flutter_dotenv: ^5.2.1
 
-  # PDF generation
+  # PDF e condivisione
   pdf: ^3.11.1
-
-  # Sharing files
   share_plus: ^10.1.2
 
-  # Authentication
+  # Autenticazione
   google_sign_in: ^6.2.2
-
-  # Secure storage per token
   flutter_secure_storage: ^9.2.2
 
-  # Local notifications
+  # Notifiche locali
   flutter_local_notifications: ^18.0.1
-
-  # Timezone per scheduling notifiche
   timezone: ^0.9.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
-
-  # Genera icone app per tutte le piattaforme
   flutter_launcher_icons: ^0.14.2
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
+  # Assets
   assets:
-    - .env
     - assets/images/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
+  # Fonts (aggiungi se vuoi)
   # fonts:
-  #   - family: Schyler
+  #   - family: MyFont
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  #       - asset: assets/fonts/MyFont-Regular.ttf
 
 # Configurazione icone app
 flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/icons/app_icon.png"
-  # Adaptive icon per Android con sfondo blu che si adatta meglio alla modalità scura
-  adaptive_icon_background: "#5DADE2"  # Blu che si adatta a entrambe le modalità
+  adaptive_icon_background: "#5DADE2"
   adaptive_icon_foreground: "assets/icons/app_icon.png"
-  # Per iOS l'icona è una sola, ma il sistema gestisce automaticamente l'aspetto
